[package]
name = "meteora-sniper-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
solana-client = "2.2.7"
yellowstone-grpc-client = { version = "6.1.0" }
yellowstone-grpc-proto = { version = "6.1.0" }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
spl-associated-token-account = "7.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tokio-util = "0.7.12"
anyhow = "1.0.93"
reqwest = "0.12.15"
serde_json = "1.0.132"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.22.1"
futures = "0.3.31"
thiserror = { version = "2.0.12", features = [] }
borsh = "1.5.1"
tonic = { version = "0.13.1", features = ["transport", "tls-native-roots"] }
spl-token = "8.0.0"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
